# ModalHackathon

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: model.py  news.py  overview.py  plot-generators.py  plot_generators.py  transcript.py  vllm_inference.py
