[project]
name = "modalhackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "modal>=0.73.135",
    "openai>=1.69.0",
    "reportlab>=4.3.1",
    "smolagents>=1.12.0",
]
